# viscord-rs

./: Cargo.toml
src/: com_bar.rs  command.rs  commandmsg.rs  info_bar.rs  inputmode.rs  main.rs
