[package]
name = "viscord-rs"
version = "0.0.0"
authors = ["thegergo02 <thegergo02@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pancurses = "0.16"
pancurses = { git = "https://github.com/thegergo02/pancurses", branch = "thegergo02-sendsyncinput" }
