[package]
name = "viscord-rs"
version = "0.0.0"
authors = ["thegergo02 <thegergo02@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
serenity = { git = "https://github.com/thegergo02/serenity", branch = "current" }
